# redi-python-intro

./: .gitignore  .gitmodules  LICENSE  README.md
Lesson 1/: Lesson 1.ipynb  Lesson 1.slides.html
Lesson 10/: Classes.ipynb
Lesson 2/: Lesson 2.html  Lesson 2.ipynb  (+1 more)
theory/slides-2-0/: .gitignore  CMakeLists.txt  README.md
theory/slides-2-0/Example/: CMakeLists.txt  slides.md  slides.md.in
theory/slides-2-0/Example/python/: two-instructions.py
theory/slides-2-0/cmake/: replace-by-file-contents.cmake  replace-by-file-contents.py
theory/slides-2-0/remark.js/: CMakeLists.txt  template.html.in
theory/slides-2-0/remark.js/css/: CMakeLists.txt  Makefile  cmake_install.cmake
theory/slides-2-0/remark.js/css/base/: Makefile  cmake_install.cmake
theory/slides-2-0/remark.js/css/base/css/: base.css
theory/slides-2-0/remark.js/css/default/: Makefile  cmake_install.cmake
theory/slides-2-0/remark.js/css/default/css/: default_colors.css
theory/slides-2-0/remark.js/css/redi/: CMakeLists.txt
theory/slides-2-0/remark.js/css/redi/css/: redi.css
theory/slides-2-0/remark.js/css/remark/: CMakeLists.txt
theory/slides-2-0/remark.js/css/remark/css/: remark.css
theory/slides-2-0/topic-1/: CMakeLists.txt  slides.md  slides.md.in
theory/slides-2-0/topic-1-introduction/: CMakeLists.txt
theory/slides-2-0/topic-1/python/: hello-broken.py  hello-comments.py  hello.py  two-instructions.py
theory/slides-2-0/topic-2-interactive-programs/: CMakeLists.txt  slides.md  slides.md.in
theory/slides-2-0/topic-2-interactive-programs/python/: floats.py  input.py  integers.py
(+211 files in other folders)
